--- a/AdoTrabalhoFinal/demo/src/main/resources/templates/index.html
+++ b/AdoTrabalhoFinal/demo/src/main/resources/templates/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <script src="./scripst.js"></script>
     <title>Página inicial</title>
 
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 
@@ -27,8 +25,7 @@
             </thead>
 
             <tbody>
-                <tr data-th-each="filmes : ${filmes}">
-                   <td data-th-text="${filmes.id}"></td>
+                <tr data-th-each="filmes : ${listaFilmes}">
                    <td data-th-text="${filmes.titulo}"></td>
                    <td data-th-text="${filmes.genero}"></td>
                    <td data-th-text="${filmes.anoLancamento}"></td>
